# vllm-ascend-ci-insight

./: .gitignore  README.md  pyproject.toml
docs/: app.js  i18n.js  index.html  style.css
docs/reports/: index.json
docs/reports/2026-05-25/: pr-9227.json  pr-9239.json  pr-9243.json  pr-9256.json  pr-9265.json  pr-9272.json  pr-9273.json  pr-9307.json  pr-9316.json  pr-9349.json  pr-9350.json  pr-9371.json  pr-9393.json  pr-9435.json  pr-9437.json  pr-9449.json  pr-9460.json  pr-9467.json  pr-9476.json  pr-9486.json  pr-9498.json  pr-9499.json  pr-9504.json
docs/reports/2026-05-28/: pr-9648.json  pr-9650.json  pr-9660.json  pr-9671.json
scripts/: run.sh
src/: __main__.py  analyzer.py  collector.py  models.py  reporter.py
