[project]
name = "ascend-ci-insight"
version = "0.1.0"
description = "CI pipeline observability + intelligent diagnosis for vllm-ascend"
requires-python = ">=3.10"
dependencies = [
    "dacite>=1.8",
]

[project.scripts]
ascend = "src.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
